--- a/CapstoneProject/.classpath
+++ b/CapstoneProject/.classpath
@@ -1,6 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8">
+		<attributes>
+			<attribute name="module" value="true"/>
+		</attributes>
+	</classpathentry>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="lib" path="lib/api-common-1.7.0.jar"/>
 	<classpathentry kind="lib" path="lib/auto-value-1.4.jar"/>
@@ -63,7 +67,6 @@
 	<classpathentry kind="lib" path="lib/proto-google-common-protos-1.12.0.jar"/>
 	<classpathentry kind="lib" path="lib/proto-google-iam-v1-0.12.0.jar"/>
 	<classpathentry kind="lib" path="lib/slf4j-api-1.7.25.jar"/>
-	<classpathentry kind="lib" path="lib/slf4j-simple-1.7.25.jar"/>
 	<classpathentry kind="lib" path="lib/threetenbp-1.3.3.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
